testsuite/escript/classes/fail-multiple-base.err
fail-multiple-base.src:3:27: error: Class 'Animal' references base class 'BaseClass1' multiple times.