testsuite/escript/classes/fail-multiple-base.src
class BaseClass1 endclass

class Animal( BaseClass1, BaseClass1 )
endclass

Animal();
